# hardware-hacking

./: .gitignore  BOLT_CTF_GUIDE.md  BOLT_CTF_QUICKSTART.md  CBECSC23.md  CLAUDE.md  GLITCH_O_BOLT_INTEGRATION_SUMMARY.md  HWH_TUI_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_TUI.md  README.md  REORGANIZATION_SUMMARY.md  START_HERE.md  TEST_RESULTS.md  WHAT_TO_TRY_NEXT.md  WIRING_DIAGRAMS.txt  canonicalization.md  challenge1_ram_dump.py  challenge2_glitching.py  demo_interactive.sh  gadget-chains.md  interact_ctf_device.py  memory-disclosure.md  reference-confusion.md  setup.md  setup_glitching_attack.py  test_all_functionality.py  test_bolt_uart.py  test_connections.py  test_multi_device.py  test_uart_quick.py  toctou.md  truncation.md
attack-patterns/: README.md  deserialization.md  memory-disclosure.md  parser-differential.md  semantic-gap.md  state-confusion.md  type-confusion.md
docs/: TUI_ARCHITECTURE.md
docs/bolt-ctf/: README.md  analysis.md  pinout.md  wiring.md
docs/guides/: setup.md  targets-guide.md
docs/tools/: README.md  multi-device.md  tui-design.md
hwh/: BUSPIRATE_USAGE.md  FIXES_APPLIED.md  GLITCH_PROFILES_GUIDE.md  KNOWN_ISSUES.md  PHASE1_IMPLEMENTATION.md  README.md  __init__.py  backend_blackmagic.py  backend_bolt.py  backend_buspirate.py  backend_stlink.py  backend_tigard.py  backends.py  bpio.fbs  bpio2_protocol.py  cli.py  detect.py  interactive.py  pyproject.toml  setup.sh  test_buspirate.py
hwh/backends/: backend_bolt.py  backend_buspirate.py
hwh/bpio/: RequestPacket.py  ResponsePacket.py
hwh/docs/: BPIO2_IMPLEMENTATION.md  README.md
hwh/pybpio/: __init__.py  bpio_client.py  bpio_i2c.py  bpio_uart.py  docs_demo.py
hwh/tests/: README.md  __init__.py  conftest.py  test_backends.py  test_detect.py
hwh/tooling/: __init__.py
hwh/tooling/glitch-o-bolt/: ConfigBaudBrute.py  ConfigChall02.py  ConfigChall03.py  ConfigChall04.py  ConfigDemo.py  ConfigDemoAll.py  ConfigGlitchBrute.py  ConfigLoginBrute.py  README.md  functions.py  glitch-o-bolt.py  scope.py  style.tcss
hwh/tui/: app.py  device_pool.py  style.tcss
hwh/wrappers/: __init__.py  buspirate.py
